# blaster

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.ai/patents/android-music-feature-extraction/: 交底书-基于生命周期状态的端侧音频多信号排序与降级方法-v0.1.md  交底书-端侧音频特征结果与云端关联结果语义解耦的搜索推荐方法-v0.1.md
.ai/prd/features/android-music-feature-extraction/: Android本地音乐特征能力-性能测试设计-v0.1.md  Android本地音乐特征能力-总体设计-v0.1.md  Android本地音乐特征能力-搜索推荐设计-v0.1.md  Android本地音乐特征能力-文档导读-v0.1.md  Android本地音乐特征能力-歌曲理解与特征链路设计-v0.1.md  Android本地音乐特征能力-资源与运行约束说明-v0.1.md  dev-plan-search-recommend-v0.1.md  dev-plan-v0.1.md  llm-music-skill-overview.md  prd-v0.1.md  resource-profile-report-2026-05-26.md  tech-design-search-recommend-v0.1.md  tech-design-v0.1.md  test-plan-resource-profile-v0.1.md
.ai/prd/features/android-music-feature-extraction/decisions/: 2026-05-14-mvp1-degraded-outdated-policy.md  2026-05-15-mvp3-audio-identity-contract-policy.md  2026-05-15-mvp3-chromaprint-android-native-policy.md  2026-05-15-mvp4-local-feature-contract-policy.md  2026-05-15-mvp4-yamnet-android-tflite-policy.md  (+3 more)
core/: build.gradle.kts  consumer-rules.pro
core/src/main/: AndroidManifest.xml
core/src/main/cpp/: CMakeLists.txt  blaster_chromaprint_jni.cpp
demo/: build.gradle.kts  proguard-rules.pro
demo/src/main/: AndroidManifest.xml
tools/resource-profile/: README.md  run_resource_profile.sh
tools/resource-profile/collectors/: capture_phase_logcat.sh  collect_cpu_sample.sh  collect_io_sample.sh  collect_mem_sample.sh
tools/resource-profile/templates/: report.template.md  summary.template.json
(+68 files in other folders)
